added better binary